fix z-index for light switch button #369

--- a/src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
+++ b/src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
@@ -928,6 +928,7 @@ body {
     cursor: pointer;
     text-align: center;
     background: #fff;
+    z-index: 996;
 }
 
 #lighticon {
